--- a/public/stylesheets/fontXml.css
+++ b/public/stylesheets/fontXml.css
@@ -179,6 +179,7 @@ table.wine1 td:nth-of-type(2) {
 table.favorite{
     /*border: 10px solid white;*/
     width: 100%;
+    align-items: center;
 }
 
 table.favorite td:nth-of-type(1) {
