--- a/app/views/favoritePage.scala.html
+++ b/app/views/favoritePage.scala.html
@@ -97,6 +97,7 @@
                         }
                         @if(!(login.isEmpty)) {
                             <li><a href="@routes.LoginController.logout()">Выход</a></li>
+                            <li><a href="@routes.RatingController.ratingUserPage()">История оценок</a></li>
                         }
                     </ul>
                 </li>
