--- a/app/views/contactPage.scala.html
+++ b/app/views/contactPage.scala.html
@@ -95,6 +95,7 @@
                         }
                         @if(!(login.isEmpty)) {
                             <li><a href="@routes.LoginController.logout()">Выход</a></li>
+                            <li><a href="@routes.RatingController.ratingUserPage()">История оценок</a></li>
                         }
                     </ul>
                 </li>
