--- a/app/views/salesPage.scala.html
+++ b/app/views/salesPage.scala.html
@@ -111,6 +111,7 @@
                         }
                         @if(!(login.isEmpty)) {
                             <li><a href="@routes.LoginController.logout()">Выход</a></li>
+                            <li><a href="@routes.RatingController.ratingUserPage()">История оценок</a></li>
                         }
                     </ul>
                 </li>
@@ -135,12 +136,13 @@
                     <input type="hidden" name="numberSql" value="0">
                     <input type="submit" value="Корзина" class="button_menu">
                     }</a></li>
-                <li><a href="#win3" class="button button-green">Добавление акции</a></li>
+
                 <li><a>@helper.form(action = routes.BasketController.basketPage) {
                     <input type="hidden" name="numberSql" value="1">
                     <input type="submit" value="Избранное" class="button_menu">
                     }</a></li>
                 @if(isAdmin) {
+                    <li><a href="#win3" class="button button-green">Добавление акции</a></li>
                     <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
                 }
             </ul>
@@ -149,7 +151,7 @@
             <p></p>
             <br>
             <br>
-            <table class="favorite">
+            <table class="sales">
                 <td>
                     <div id="main"><!— Основной раздел содержимого —>
                         <section id="content"><!— Основной подраздел содержимого —>
