--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -72,6 +72,7 @@
                 <li> <a href=#>Личный кабинет </a>
                     <ul class="submenu">
                         <li><a href="@routes.LoginController.logout()">Выход</a></li>
+                        <li><a href="@routes.RatingController.ratingUserPage()">История оценок</a></li>
                     </ul>
                 </li>
             </ul>
