--- a/app/views/usersRatingPage.scala.html
+++ b/app/views/usersRatingPage.scala.html
@@ -33,7 +33,7 @@
                     }
                     @if(!(login.isEmpty)) {
                         <li><a href="@routes.LoginController.logout()">Выход</a></li>
-                        <li><a href="@routes.RatingController.ratingUserPage()">Действия</a></li>
+                        <li><a href="@routes.RatingController.ratingUserPage()">История оценок</a></li>
                     }
                 </ul>
             </li>
