--- a/public/stylesheets/fontXml.css
+++ b/public/stylesheets/fontXml.css
@@ -186,6 +186,17 @@ table.favorite td:nth-of-type(1) {
     width:1000px;
 }
 
+table.sales{
+    /*table-layout:fixed;*/
+    /*border: 10px solid white;*/
+    width: 70%;
+    align-items: center;
+}
+
+table.sales td:nth-of-type(1) {
+    width:400px;
+}
+
 
 
 
@@ -251,6 +262,9 @@ img {
     color: black;
     height: 450px;
     width: 300px;
+
+    margin-right: 50px;
+
 
     overflow: hidden;
 
@@ -463,20 +477,22 @@ img {
 }
 
 /*оформляет как раз столбцы*/
-#content #sale ul li {
+#content  #left #sale ul li {
     /*float:left;*/
     float: left;
 
-    padding-bottom: 2px;
-    padding-left: 2px;
+    padding-bottom: 10px;
+    padding-left: 100px;
+    margin-right: 30px;
     width: 33%;
 }
 #content  #sale-user ul li {
     /*float:left;*/
     float: left;
 
-    padding-bottom: 2px;
-    padding-left: 2px;
+    padding-bottom: 10px;
+    padding-left: 100px;
+    margin-right: 30px;
     width: 33%;
 }
 
@@ -498,6 +514,7 @@ input[type="text"]{
     border-radius:15px;
     -moz-border-radius:15px;
     -webkit-border-radius:15px;
+    color: black;
     width:200px;
     height: 40px;
     text-align: center;
@@ -507,7 +524,8 @@ input[type="number"]{
     -moz-border-radius:15px;
     -webkit-border-radius:15px;
     width:100px;
-    color: #444;
+
+    color: black;
     text-align: center;
 }
 
