--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -48,8 +48,8 @@
                 <h1 class="modal-title">Регистрация </h1>
             </div>
             @helper.form(action = routes.UsersController.addingUser, 'id -> "slick-login") {
-                @helper.inputText(registrationForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
-                @helper.inputText(registrationForm("password"), '_showConstraints -> false, 'placeholder -> "Ваш сложный пароль", 'required -> "required")
+                @helper.inputText(registrationForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required",'size->45,'maxlength ->45)
+                @helper.inputText(registrationForm("password"), '_showConstraints -> false, 'placeholder -> "Ваш сложный пароль", 'required -> "required",'size->45,'maxlength ->45)
                 @if(isAdmin) {
                     Права администратора:@helper.checkbox(registrationForm("isAdmin"))
                 }
