--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -21,8 +21,8 @@
                     <h1 class="modal-title">Вход в личный кабинет</h1>
                 </div>
                 <br>
-                @helper.inputText(bookForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
-                @helper.inputPassword(bookForm("password"), '_showConstraints -> false, 'placeholder -> "Пароль", 'required -> "required")
+                @helper.inputText(bookForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required",'size->45,'maxlength ->45)
+                @helper.inputPassword(bookForm("password"), '_showConstraints -> false, 'placeholder -> "Пароль", 'required -> "required",'size->45,'maxlength ->45)
                 <div class="modal-footer">
                     <input type ="submit" value="Войти">
                 </div>
@@ -36,8 +36,8 @@
                 <h1 class="modal-title">Регистрация </h1>
             </div>
             @helper.form(action = routes.UsersController.addingUser(), 'id -> "slick-login") {
-                @helper.inputText(registrationForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required")
-                @helper.inputText(registrationForm("password"), '_showConstraints -> false, 'placeholder -> "Ваш сложный пароль", 'required -> "required")
+                @helper.inputText(registrationForm("login"), '_showConstraints -> false, 'placeholder -> "Логин", 'required -> "required",'size->45,'maxlength ->45)
+                @helper.inputText(registrationForm("password"), '_showConstraints -> false, 'placeholder -> "Ваш сложный пароль", 'required -> "required",'size->45,'maxlength ->45)
                 @if(isAdmin) {
                     Права администратора:@helper.checkbox(registrationForm("isAdmin"))
                 }
