--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -93,7 +93,10 @@
                     <input type="hidden" name="numberSql" value="0">
                     <input type="submit" value="Корзина" class="button_menu">
                     }</a></li>
-
+                <li><a>@helper.form(action = routes.SaleController.showSales) {
+                    <input type="submit" value="Акции" class="button_menu">
+                    }</a>
+                </li>
                 <li><a>@helper.form(action = routes.BasketController.basketPage) {
                     <input type="hidden" name="numberSql" value="1">
                     <input type="submit" value="Избранное" class="button_menu">
